// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseText /> should render regular text 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    color="surface.text.normal.highContrast"
    font-family="text"
    font-size="25"
    font-weight="regular"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text as paragraph element 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.625rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: line-through;
  text-decoration-line: line-through;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

<div>
  <p
    class="c0"
    color="surface.text.normal.highContrast"
    font-family="text"
    font-size="25"
    font-style="italic"
    font-weight="regular"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<BaseText /> should render text in italics style with line-through 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.625rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: line-through;
  text-decoration-line: line-through;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    color="surface.text.normal.highContrast"
    font-family="text"
    font-size="25"
    font-style="italic"
    font-weight="regular"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<BaseText /> should render text with default properties 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
  >
    Displaying some text
  </div>
</div>
`;
